<resources>
    <string name="app_name">Projektarbete_VG</string>
    <string name="bokens_hittaren">Bokens Hittaren</string>
    <string name="here_is_googlebooksapi">HERE is GoogleBooksApi</string>
    <string name="this_is_a_smallthumbnail">This is a smallThumbnail</string>
    <string name="enter_desired_book">Enter desired book?</string>
    <string name="search">Search</string>
    <string name="textview">TextView</string>
    <!-- DONE: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bilden_resultat">Bilden_resultat</string>
    <string name="many_tilda">~~~~~~~~~~~~~~~~~~~~~~~~~~</string>
    <string name="hejsan_t_m_fragmentet">Hejsan töm fragmentet</string>
    <string name="todo">TODO</string>
    <string name="annan_bild">annan bild</string>
    <string name="first_result_description">First result description</string>
    <string name="description_of_scrollview_inside_fragment">Description of scrollview inside fragment</string>
    <string name="second_result_description">Second result description</string>
    <string name="countersearchesvalue_resultatfragment">CounterSearchesValue ResultatFragment</string>
    <string name="to_resultat_fragment">To Resultat Fragment</string>
    <string name="hello_viewdatabasefragment">Hello ViewDatabaseFragment</string>
    <string name="hello_from_the_view_database_fragment">~~~Hello from the view database fragment ~~</string>
    <string name="tvcountervaluefragment_text">tvCounterValueFragment TEXT</string>
</resources>