<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultatFragment"
    android:background="@color/purple_200">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_FirstResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bilden_resultat"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_First_Result_Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="times"
            android:text="@string/first_result_description"
            android:textAlignment="center"
            android:textColor="#4E342E"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Separation_Many_Tildas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="times"
            android:text="@string/many_tilda"
            android:textAlignment="center"
            android:textColor="#4E342E"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_SecondResult"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/annan_bild"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_Second_Result_Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="times"
            android:text="Second result description"
            android:textAlignment="center"
            android:textColor="#4E342E"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>